# flashy

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose-dev.yml  docker-compose.yml  docker-entrypoint.sh  package-lock.json  package.json
.cargo/: audit.toml
.github/workflows/: build-artifacts.yml  ci.yml  create-release.yml  docker-build.yml
end2end/: package-lock.json
migrations/: 0001_init.sql  0002_auth.sql  0003_projects.sql  0004_flashcards.sql  0005_generation_jobs.sql  0006_file_processing.sql  0007_generation_job_segments.sql  0008_summaries.sql
src/: app.rs  app_state.rs  config.rs  config_handlers.rs  lib.rs  main.rs  validation.rs
src/components/: modal.rs
src/db/: mod.rs  pool.rs
src/features/: mod.rs
src/features/auth/: admin_handlers.rs  handlers.rs  mod.rs  models.rs  utils.rs
src/features/flashcards/: anki_builder.rs  markdown.rs  mod.rs  models.rs
src/features/flashcards/handlers/: anki_export.rs  decks.rs  generation.rs  mod.rs
src/features/invites/: handlers.rs  models.rs
src/features/projects/: handlers.rs  mod.rs  models.rs  processing.rs  storage.rs
src/features/projects/handlers/: files.rs  mod.rs  projects.rs  segments.rs  ssr.rs
src/features/summaries/: models.rs
src/features/summaries/handlers/: mod.rs  summaries.rs
src/pages/: auth.rs  home.rs  invites.rs  mod.rs  settings.rs
src/pages/admin/: invites.rs  layout.rs  mod.rs  users.rs
src/pages/flashcards/: decks.rs  mod.rs  viewer.rs
src/pages/flashcards/detail/: components.rs  mod.rs
src/pages/projects/: detail.rs  list.rs  mod.rs
src/pages/summaries/: list.rs  mod.rs  viewer.rs
style/: main.css
