[package]
name = "flashy"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8.0", features = ["nightly"] }
leptos_router = { version = "0.8.0", features = ["nightly"] }
axum = { version = "0.8.0", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
leptos_axum = { version = "0.8.0", optional = true }
leptos_meta = { version = "0.8.0" }
tokio = { version = "1", features = ["rt-multi-thread", "fs", "io-util", "process", "time"], optional = true }
tokio-util = { version = "0.7", optional = true }
futures-util = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2.106", optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"], default-features = false, optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
dotenvy = { version = "0.15", optional = true }
serde = { version = "1", features = ["derive"] }
bcrypt = { version = "0.18", optional = true }
tower-sessions = { version = "0.14", optional = true }
tower-sessions-sqlx-store = { version = "0.15", features = ["sqlite"], default-features = false, optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
time = { version = "0.3", features = ["formatting", "parsing"], optional = true }
s3 = { version = "0.1.17", optional = true }
tempfile = { version = "3", optional = true }
llm = { version = "1.2", features = ["deepseek"], optional = true }
serde_json = { version = "1", optional = true }
gloo-timers = { version = "0.3", features = ["futures"], optional = true }
web-sys = { version = "0.3", optional = true }
js-sys = { version = "0.3", optional = true }
pulldown-cmark = "0.13"
regex = "1"
zip = { version = "8", optional = true }
rusqlite = { version = "0.32", features = ["bundled"], optional = true }

[features]
hydrate = [
    "leptos/hydrate",
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
    "dep:gloo-timers",
    "dep:web-sys",
    "dep:js-sys",
]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:leptos_axum",
    "dep:sqlx",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:dotenvy",
    "dep:bcrypt",
    "dep:tower-sessions",
    "dep:tower-sessions-sqlx-store",
    "dep:uuid",
    "dep:time",
    "dep:s3",
    "dep:tempfile",
    "dep:tokio-util",
    "dep:futures-util",
    "dep:llm",
    "dep:serde_json",
    "dep:zip",
    "dep:rusqlite",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "flashy"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# The tailwind input file - this will be the main CSS file
tailwind-input-file = "style/main.css"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "public"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"

# The port to use for automatic reload monitoring
reload-port = 3001

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"
